Fixing spacing after adding category javascript

--- a/server/view/css/contentPage.css
+++ b/server/view/css/contentPage.css
@@ -304,6 +304,7 @@ a {
 }
 #editContent #addCategory {
     margin-top:13px;
+    float: left;
 }
 .accountInfo {
     font-size:10px;
